--- a/style.css
+++ b/style.css
@@ -30,18 +30,20 @@ table, td {
     border: 1px solid black;
 }
 
-a.active {
+.active {
     background-color: #007bff;
-    color: white;
     border-color: #007bff;
+    color: white;
+    text-align: center;
 }
 
 .pageLink {
     padding: 5px;
     margin-top: 20px 0px;
     border: 1px solid black;
-    text-decoration: none;
     color: black;
+    text-decoration: none;
+    text-align: center;
 }
 
 .pageLink:hover {
