new routing injected

--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body {
     box-shadow: 1px 1px 3px black;
 }
 
-.nav > a[href="logout"] {
+.nav > a[href="logout/"] {
     background-color: tomato;
 }
 
