--- a/css/style.css
+++ b/css/style.css
@@ -196,6 +196,10 @@ table, td {
 
 .notice {
     background-color: #EFF;
-    border: 1px solid #DEE;
     color: #6989ab;
+}
+
+.warning {
+    background-color: #ff7a7a;
+    color: #ffffff;
 }
