--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,7 +75,7 @@ table, td {
 
 .pageLink {
     padding: 5px;
-    margin-top: 20px 0px;
+    margin-top: 20px;
     border: 1px solid black;
     color: black;
     text-decoration: none;
